# Monopoly2.0

./: CMakeLists.txt  README.txt
include/: Casella.h  Casella_Prob_Impr.h  Casella_Societa.h  Casella_Stazione.h  Casella_Tasse.h  Casella_Terreno.h  Computer.h  Giocatore.h  Human.h  Tabellone.h  Variabili.h
src/: Casella.cpp  Casella_Terreno.cpp  Computer.cpp  Game.cpp  Giocatore.cpp  Human.cpp  Tabellone.cpp
